# dvida_oxide

./: .gitignore  .gitmodules  ;  GNUmakefile  README.md  attach.sh  configure.py  console.txt  detach.sh  format_disk.sh  initext2.sh  limine.cfg  limine.conf  markers  pkgList
dvida_serialize/: Cargo.toml  LICENSE  expanded.rs
dvida_serialize/src/: lib.rs  numbers.rs
dvida_serialize_macros/: Cargo.toml
dvida_serialize_macros/src/: lib.rs
ejcineque/: Cargo.toml
ejcineque/src/: executor.rs  lib.rs
ejcineque/src/futures/: mod.rs  race.rs
ejcineque/src/pools/: mod.rs
ejcineque/src/sync/: mod.rs  mutex.rs  spin.rs
ejcineque/src/sync/mpsc/: unbounded.rs
ejcineque/src/sync/spsc/: cell.rs
ejcineque/src/time/: mod.rs
ejcineque/src/wakers/: mod.rs
kernel/: .gitignore  .rustc_info.json  Cargo.toml  GNUmakefile  kernel  linker.ld  rust-analyzer.toml  rustc-ice-2026-01-17T00_45_33-17964.txt  rustc-ice-2026-01-17T00_45_33-17965.txt  rustc-ice-2026-01-30T12_34_26-23565.txt  rustc-ice-2026-01-30T12_34_26-23566.txt
kernel/.cargo/: config.toml
kernel/arch_specific_configs/: linker.aarch64.ld
kernel/src/: args.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: init.rs
kernel/src/arch/x86_64/: err.rs  gdt.rs  idt.rs  init.rs  mod.rs  msi.rs  pcie.rs  pic.rs  pit.rs  timer.rs
kernel/src/arch/x86_64/acpi/: apic.rs  mcfg.rs  mod.rs
kernel/src/arch/x86_64/handlers/: irq.rs  isr.rs  mod.rs
kernel/src/arch/x86_64/memory/: bitmap.rs  frame_allocator.rs  heap.rs  memmap.rs  mod.rs  page_table.rs  per_cpu.rs  pmm.rs
kernel/src/arch/x86_64/mp/: mod.rs
kernel/src/arch/x86_64/scheduler/: elf.rs  loader.rs  mod.rs  syscall.rs  syscall.s  syscall_no_comment.s
kernel/src/base/: mod.rs
kernel/src/base/arch/x86_64/: gdt.rs  idt.rs  mod.rs  pic.rs
kernel/src/base/arch/x86_64/handlers/: irq.rs  isr.rs
kernel/src/base/arch/x86_64/memory/: mod.rs  pmm.rs
kernel/src/base/debug/: mod.rs  terminal.rs  test.rs
kernel/src/base/shell/: terminal.rs
kernel/src/crypto/: crc32.rs  elf.rs  guid.rs  iterators.rs  mod.rs  random.rs  uuid.rs
kernel/src/debug/: mod.rs  terminal.rs  test.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/ata/: mod.rs
kernel/src/drivers/ata/pata/: mod.rs  pio.rs
kernel/src/drivers/ata/sata/: ahci.rs  command.rs  fis.rs  io.rs  mod.rs  task.rs
kernel/src/drivers/fs/: mod.rs
kernel/src/drivers/fs/ext2/: allocator.rs  block_iterator.rs  create_file.rs  delete.rs  dirs.rs  init.rs  inode.rs  managers.rs  mod.rs  mount.rs  open.rs  read.rs  structs.rs  write.rs
kernel/src/drivers/keyboard/: mod.rs  ps2.rs
kernel/src/dyn_mem/: allocator.rs  mod.rs
kernel/src/ejcineque/: executor.rs  mod.rs
kernel/src/ejcineque/futures/: multi_race.rs  race.rs
kernel/src/ejcineque/pools/: mod.rs
kernel/src/ejcineque/sync/: mutex.rs  spin.rs
kernel/src/ejcineque/sync/mpsc/: bounded.rs  unbounded.rs
kernel/src/ejcineque/sync/spsc/: cell.rs
kernel/src/ejcineque/time/: mod.rs
kernel/src/ejcineque/wakers/: mod.rs
kernel/src/hal/: buffer.rs  fs.rs  gpt.rs  keyboard.rs  mod.rs  path.rs  storage.rs  vfs.rs
kernel/src/terminal/: font.rs  mod.rs  port_dbg.rs
kernel/src/time/: formats.rs  mod.rs
kernel/src/utils/: crc32.rs  guid.rs  mod.rs
macros/: Cargo.toml
makefiles/: makefile_aarch64  makefile_x86_64
unused/: gpt.rs
(+4 files in other folders)
