[package]
name = "dvida_serialize_macros"
version = "0.1.0"
edition = "2024"
authors = ["David Huang jiguangllsw@gmail.com"]
license = "MIT"
description = "no_std serialization and deserialization proc-macros"

[lib]
proc-macro = true


[dependencies]
syn = { version = "2.0", features=["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.103"
