[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.2.0"
x86_64 = { version = "0.15.2", features = ["instructions", "nightly"] }
pic8259 = "0.11.0"
spin = "0.9.8"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.10.5"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
dvida_serialize = { path = "../dvida_serialize/" }
ejcineque = { path = "../ejcineque/" }
terminal = { path = "../terminal/" }
once_cell_no_std = "0.1.1"
uuid = { version = "1.18.1", default-features = false }
getrandom = "0.3.4"
memoffset = "0.9.1"
bytemuck = { version = "1.24.0", default-features=false, features = ["derive"] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
