[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
limine = "0.5.0"
x86_64 = { path = "../x86_64/", features = ["instructions", "nightly", "no_rec_page_table"] }
macros = { path = "../macros/" }
pic8259 = "0.11.0"
spin = "0.9.8"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.10.5"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
dvida_serialize = { path = "../dvida_serialize/" }
once_cell_no_std = "0.1.1"
uuid = { version = "1.18.1", default-features = false }
memoffset = "0.9.1"
bytemuck = { version = "1.24.0", default-features=false, features = ["derive"] }
heapless = "0.9.2"
paste = "1.0.15"
bitfield = "0.19.4"
smart-default = "0.7.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
